<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/details_root"
  android:transitionName="details"
  android:layout_width="match_parent"
  android:layout_height="wrap_content">

  <ImageView
    android:id="@+id/notification_icon"
    android:layout_width="64dp"
    android:layout_height="64dp"
    android:padding="16dp"
    android:background="@drawable/background_success"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:srcCompat="@drawable/ic_done_white"/>
  <TextView
    android:id="@+id/notification_text"
    android:textStyle="bold"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="8dp"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="8dp"
    android:contentDescription="@string/notification_status"
    android:textAppearance="@style/TextAppearance.AppCompat.Large"
    app:layout_constraintEnd_toStartOf="@+id/notification_time"
    app:layout_constraintStart_toEndOf="@+id/notification_icon"
    app:layout_constraintTop_toTopOf="parent"
    tools:text="Success "/>
  <TextView
    android:id="@+id/notification_time"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="end"
    android:contentDescription="@string/notification_build_started_at"
    android:textAlignment="viewEnd"
    android:textColor="?android:attr/textColorSecondary"
    app:layout_constraintBaseline_toBaselineOf="@+id/notification_text"
    app:layout_constraintEnd_toEndOf="parent"
    tools:text="@tools:sample/date/ddmmyy"/>
  <TextView
    android:id="@+id/notification_device"
    style="@style/DetailStyle"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="12dp"
    android:layout_marginEnd="8dp"
    android:layout_marginRight="8dp"
    android:contentDescription="@string/notification_device"
    android:drawableLeft="@drawable/ic_phone_android_black"
    app:layout_constraintEnd_toStartOf="@+id/notification_build_version"
    app:layout_constraintStart_toStartOf="@+id/notification_text"
    app:layout_constraintTop_toBottomOf="@id/notification_time"
    tools:text="Device"/>
  <TextView
    android:id="@+id/notification_progress"
    style="@style/DetailStyle"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:contentDescription="@string/notification_progress"
    android:drawableRight="@drawable/ic_progress_wrench_black"
    app:layout_constraintBaseline_toBaselineOf="@+id/notification_time_taken"
    app:layout_constraintEnd_toEndOf="parent"
    tools:text="Step"/>
  <TextView
    android:id="@+id/notification_build_version"
    style="@style/DetailStyle"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:contentDescription="@string/notification_build_version"
    android:drawableRight="@drawable/ic_android_black"
    app:layout_constraintBaseline_toBaselineOf="@+id/notification_device"
    app:layout_constraintEnd_toEndOf="parent"
    tools:text="9.0"/>
  <TextView
    android:id="@+id/notification_time_taken"
    style="@style/DetailStyle"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="8dp"
    android:layout_marginEnd="8dp"
    android:layout_marginRight="8dp"
    android:contentDescription="@string/notification_total_time_taken"
    android:drawableLeft="@drawable/ic_timer_black"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toStartOf="@+id/notification_progress"
    app:layout_constraintStart_toStartOf="@+id/notification_text"
    app:layout_constraintTop_toBottomOf="@+id/notification_build_version"
    tools:text="@tools:sample/date/hhmmss"/>
</androidx.constraintlayout.widget.ConstraintLayout>